# tetsu

./: Cargo.toml  default-config.toml  expand.rs  flake.nix  sqlx-data.json
.sqlx/: query-08b8742141210281cc91ecc3490e33b22c71e26c9992b17224f2821fe2fd6de4.json  query-0b0b29cc45987de08e7c8b10110dd95397fae3e2c8129bce946d90344c4cf04c.json  query-1277871d3ab8e313446944af89cb1979010ff0392debd96889f2e045d58dd645.json  query-1857df1d5cf2d9d9fbc4acb58e986440e60829ad69ee690e77b1f60de979c324.json  query-1a507c311e873eb02c1a42ed442837abf7a7b9d52317b30812a852abce15d0cf.json  query-1ceffd0bdb21c8dfbfd334b06c286c95e4f3fbff85e3373f26b2db4d8557bd6a.json  query-1cfe956620190e6662f2dfaddec81ff896a0e203116d54f7467a51cc74f935b6.json  query-1d07614764e4547a26949dbfaf972965e51c1af329c7b3546cb1160c38d657ae.json  query-2045d4e9cc39872ef0a4202b387a81afe3cedf14256878024f0a4703844b6232.json  query-31d38a12669be6b51f83f2e33515b77404707aed725c835ff5fb61a2ee778f25.json  query-3310c56073e099a942bccccc76bf005d7bc0e2fa193c504ee8e4557aa13550f9.json  query-351fecd89e8bc8ac31d9df38c79ff94067b900dd2e135eb76097560f6f16bcb3.json  query-399db1158f810fdf7085b98cac50776767d371ca3478ca7df4ec5f7b8684fa0d.json  query-3e90605d86b633ed45460c6947fd2bb2ccb1cb307b808f9ff21024f453df2961.json  query-3f8da519814a3577fb24fe22463371f973c16f957316caf89f74bbffab3b0fc1.json  query-42e6d657aaf5ea2b66a61c1aa6067cb6d4c48d2bb8486bc421f28dac1bd0fa6b.json  query-4501ba584d84c5dafd396d79fcd6734c7bb09ae9d050f9ff0dd7f67dc3f7e7b5.json  query-45e5a09b9e69155ad7c396906b272f6a87232ca6bbc1503a3d0cf8d7fae5589c.json  query-4e9b3c758b536027389997b495bc1d45b05fc29fea6791037933898bca718900.json  query-4f05f9d3bfc297a53ae09905499b33be1ba45d0fef2205ece9a6ea7196058f80.json  query-570221418601b7ecda51ee77dc4e6bf2a9b6784c0fd3a3ae0236d63a059b9216.json  query-6ecf27a1020c21f3eaf7b4fc6e904b2924c788316cb0be0ff500aa45fbe96ae6.json  query-83fe0d730fe3720d406b1fd633585c64e490acd8bb26d4439665816f91f117b4.json  query-952c16507bd88ec5e29d0210c60f09e79e60735ff66a4f65100a659463ef7781.json  query-980298dfd9973cca8ec1eb1a7b8d46ffcac25d3a09c962966ed2614469234712.json  query-9a7a4f1efcdd11c42291295963d181dc0ab81248c8f29c4a4ddd544115129f2d.json  query-9b6d36526f4c7bec38bbac17cb257f5f857ff85ee372107fd77b5d5c0f9c0da7.json  query-9c587e451a5a61498a2573be65cef924eaefeda5ba3fd9c87d0bec829215eee8.json  query-a55923e5e4fb13a14b5f83e006aa272d07ae5910a3366db27ffe0e79fd58bad5.json  query-ac9eeb1731ede302fb2d4747e87f2cc1839a83b1aed608f9c02fecf465de5885.json  query-ae6cca8d20aa55318b6aaf173abb95eb0ef65a34c18bd9f0a93dc0406046d47a.json  query-bc91b94f8b045daecdc63af0b472111ad7e7b6ceafc9bc90327f93258de8aa1a.json  query-c03f88f9e691e612ec6d03721992f92b8fff611990b7df10cd026d7896c28ebd.json  query-cf3e392d7b340b1cb148f83cf3d7e2f5f40056b910df9dca091e3f6fba983666.json  query-cf478dd9e2d9ea219fc42a149b52059e68cb6cd6f5f4536df1b7dff9b7c501c4.json  query-cff76f5b9781161eefc1100215defa370884db26efcee526ac08a74fe2e4f66d.json  query-d3fff687470af6db2bee2c5fcbb347d521ce840347a5a6e7769ef625a9b7d41b.json  query-d61eb1b67d6e103a8872112250bc731377ef16ffe424ebb0fa6df99094d03117.json  query-db469d47e75258490105a63f55320fc14320e28f6d66250a68169218843612a2.json  query-ddca3eb96a481e87c16fd24000924d6914a6a6b329ad7621736c378a8f4ade36.json  (+3 more)
migrations/: 20221224003549_init.sql  20230806165101_create_platform_links.sql  20230807174301_create_animebytes_groups.sql  20241117190701_create_watch_progress.sql
src/: config.rs  lib.rs  log_proxy.rs  main.rs
src/anichart/: linker.rs  mod.rs
src/anichart/data/: airing.graphql  airing.rs  by_mal_id.graphql  by_mal_id.rs  common.rs
src/anidb/: command_builder.rs  mod.rs  models.rs  session.rs
src/anidb/records/: anime.rs  episode.rs  file.rs  group.rs  mod.rs
src/anidb/response/: codes.rs  mod.rs  serde.rs
src/animebytes/: mod.rs
src/animebytes/data/: site_stats.rs  status.rs
src/db/: mod.rs  settings.rs
src/gui/: async.rs  mod.rs  utils.rs
src/gui/anichart/: mod.rs
src/gui/animebytes/: mod.rs  status_panel.rs
src/gui/app/: autofocus.rs  mod.rs  page.rs
src/http_server/: error.rs  mod.rs
src/indexer/: dump.rs  ed2k.rs  mod.rs  playlist.rs
src/mpv/: mod.rs  request.rs  response.rs
src/remote_gui/: async.rs  mod.rs  utils.rs
src/server/: interface.rs  mod.rs  server.rs
src/ui/: episode_select.rs  home.rs  mod.rs
(+21 files in other folders)
