[package]
name = "tetsu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = "1.0.93"
async_once    = "0.2.6"
axum          = { version = "0.7.7", features = [ "ws", "macros" ] }
chrono        = { version = "0.4.38", features = [ "serde" ] }
clap          = { version = "4.5.20", features = [ "derive" ] }
crossterm     = { version = "0.28.1", features = [ "event-stream" ] }
dialoguer     = "0.11.0"
eframe        = { version = "0.29.1", features = [ "persistence" ] }
egui          = { version = "0.29.1", features = [ "persistence" ] }
egui_dock     = "0.14.0"
env_logger    = "0.11.5"
futures       = "0.3.31"
indicatif     = { version = "0.17.8", features = [ "rayon", "tokio" ] }
itertools     = "0.13.0"
lazy_static   = "1.5.0"
log           = "0.4.22"
md4           = "0.10.2"
memmap        = "0.7.0"
nom           = "7.1.3"
num-derive    = "0.4.2"
num-traits    = "0.2.19"
paste         = "1.0.15"
rayon         = "1.10.0"
reqwest       = { version = "0.12.9", features = [ "json", "rustls-tls" ], default-features = false }
serde         = { version = "1.0.214", features = [ "derive" ] }
serde_json    = { version = "1.0.132", features = [ "preserve_order" ] }
serde_repr    = "0.1.19"
sqlx          = { version = "0.8.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
tarpc         = { version = "0.35.0", features = [ "full" ] }
thiserror     = "2.0.3"
tokio         = { version = "1.41.1", features = [ "rt-multi-thread", "macros", "signal", "process", "parking_lot" ] }
tokio-stream  = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
toml          = "0.8.19"
unicode-width = "0.2.0"
